# riko

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  build.gradle  pom.xml  settings.gradle
.github/workflows/: sonarcloud.yml  sonarqube.yml  verify.yml
cli/: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  ir.rs  jni.rs  lib.rs  parse.rs  util.rs
core/src/ir/: sample.rs  samples.rs
examples/: Cargo.toml
examples/src/: lib.rs  serde.rs
gradle/: checkstyle.gradle
jni/runtime-rust/: Cargo.toml
jni/runtime-rust/src/: future.rs  lib.rs  object.rs
jni/runtime-target/: build.gradle
jni/runtime-target/src/main/java/riko/: MarshalException.java  Marshaler.java  Object.java  Returned.java
jni/runtime-target/src/main/kotlin/riko/: future.kt  package.kt
macro/: Cargo.toml
macro/src/: codegen.rs  config.rs  expand.rs  jni.rs  lib.rs
macro/src/jni/: codegen.rs  expand.rs
macros/: Cargo.toml
macros/src/: config.rs  jni.rs  lib.rs  parse.rs
macros/src/jni/: expand.rs
runtime/: Cargo.toml
runtime-java/: pom.xml
runtime-java/src/main/java/riko/: Error.java  Heap.java  Marshaler.java  Returned.java  ReturningIterator.java  UserException.java
runtime-java/src/test/java/riko/: HeapTests.java  HeapedTests.java
runtime-jni/: build.gradle  pom.xml
runtime-jni/src/main/java/riko/: Any.java  Error.java  Heaped.java  Marshaler.java  Object.java  Returned.java  ReturnedException.java
runtime-jni/src/test/java/riko/: ObjectTests.java
runtime-rust/: Cargo.toml
runtime-rust/src/: heap.rs  iterator.rs  iterators.rs  lib.rs  object.rs  returned.rs
runtime-rust/src/object/: jni.rs
runtime/src/: future.rs  lib.rs  object.rs  returned.rs
sample-jni/: build.gradle  pom.xml
sample-jni/src/main/: java
sample-jni/src/main/java/riko_sample/structs/: Life.java  Love.java  Work.java
sample-jni/src/test/java/: IntegrationTests.java  Tests.java
sample-jni/src/test/java/riko/: IntegrationTests.java
sample-rust/: Cargo.toml  Riko.toml
sample-rust/src/: heaped.rs  iterator.rs  lib.rs  object.rs  serde.rs
sample/jni/: pom.xml
sample/jni/src/test/java/riko/: IntegrationTests.java
sample/rust/: Cargo.toml  Riko.toml
sample/rust/.cargo/: config.toml
sample/rust/src/: heap.rs  lib.rs  object.rs  serde.rs  structs.rs
samples/: README.md
samples/rust/: Cargo.toml  Riko.toml
samples/rust/src/: heap.rs  iterators.rs  lib.rs  serde.rs
stub/: ObjectMapper.astub
