[package]
categories = ["development-tools::ffi"]
description = "Sub-optimal language binding generator - Command line tools"
edition = "2018"
name = "riko_cli"
repository = "https://github.com/seamlik/riko"
version = "0.0.1"

[dependencies]
anyhow = "1"
cargo_metadata = "0"
env_logger = "0"
log = "0"
riko_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }