[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
categories = ["development-tools::ffi"]
description = "Core components of Riko"
edition = "2018"
name = "riko_core"
repository = "https://github.com/seamlik/riko"
version = "0.0.1"

[dependencies]
itertools = "0"
log = "0"
proc-macro2 = { version = "1", features = ["span-locations"]}
quote = "1"
regex = { version = "1", features = ["pattern"] }
syn = { version = "1", features = ["full"] }
thiserror = "1"