[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
categories = ["development-tools::ffi"]
description = "Core components of Riko"
edition = "2018"
name = "riko_core"
repository = "https://github.com/seamlik/riko"
version = "0.0.1"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
itertools = "0"
futures = "0.3.4"
log = "0"
proc-macro2 = { version = "1", features = ["span-locations"]}
quote = "1"
regex = { version = "1", features = ["pattern"] }
strum = "0"
strum_macros = "0"
syn = { version = "1", features = ["full"] }
thiserror = "1"