[package]
categories = ["development-tools::ffi"]
description = "Core components of Riko"
edition = "2018"
name = "riko_core"
repository = "https://github.com/seamlik/riko"
version = "0.0.1"

[dependencies]
async-std = "1"
itertools = "0"
futures-util = { version = "0.3", features = ["io"] }
log = "0"
proc-macro2 = { version = "1", features = ["span-locations"]}
quote = "1"
strum = "0"
strum_macros = "0"
syn = { version = "1", features = ["extra-traits"] }
thiserror = "1"

[dev-dependencies]
regex = { version = "1", features = ["pattern"] }