[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
categories = ["development-tools::ffi"]
description = "Sub-optimal language binding generator"
edition = "2018"
name = "riko"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
derive_more = "0"
itertools = "0"
once_cell = "1"
proc-macro2 = "1.0.3"
quote = "1.0.2"
regex = { version = "1", features = ["pattern"] }
serde = { version = "1.0.98", features = ["derive"] }
syn = { version = "1.0.5", features = ["full"] }
toml = "0.5.1"