[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
categories = ["development-tools::ffi"]
description = "Sub-optimal language binding generator"
edition = "2018"
name = "riko"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
cargo_metadata = "0"
itertools = "0"
proc-macro2 = { version = "1", features = ["span-locations"]}
quote = "1"
riko_core = { path = "../core" }
syn = { version = "1", features = ["full"] }