[package]
categories = ["development-tools::ffi"]
description = "Sub-optimal language binding generator"
edition = "2018"
name = "riko"
repository = "https://github.com/seamlik/riko"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
cargo_metadata = "0"
env_logger = "0"
itertools = "0"
log = "0"
quote = "1"
riko_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }