[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
categories = ["development-tools::ffi"]
description = "Sub-optimal language binding generator"
edition = "2018"
name = "riko"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.3.0"
proc-macro2 = "0.4.30"
proc-quote = "0.2.2"
quote = "0.6.13"
serde = { version = "1.0.98", features = ["derive"] }
strum = "0.15.0"
strum_macros = "0.15.0"
syn = { version = "0.15.43", features = ["full"] }
toml = "0.5.1"