[package]
edition = "2018"
name = "riko_sample"
publish = false
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0"
once_cell = "1"
riko = { path = "../macro" }
riko_runtime = { path = "../runtime-rust" }
serde = { version = "1.0.98", features = ["derive"] }