[package]
edition = "2018"
name = "riko_sample"
publish = false
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-channel = "0.3"
futures-timer = "3"
jni = "0"
riko = { path = "../../macro" }
riko_runtime = { path = "../../runtime" }
riko_runtime_jni = { path = "../../jni/runtime-rust" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"